bench/tests/plans/snapshots/r#mod__plans__wind_farm__Wind Farm - ProductionQuery3 (Execution Plan, Object ID).snap
---
source: bench/tests/plans/wind_farm.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(site_label@0) as site_label, ENC_PT(wtur_label@1) as wtur_label, ENC_PT(t@3) as t, ENC_PT(val@2) as val]
  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, val@3, t@5]
    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(dp@2, dp@0)], projection=[site_label@0, wtur_label@1, dp@2, val@4]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, dp@4]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(ts@2, ts@0)], projection=[site_label@0, wtur_label@1, ts@2]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, ts@4]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator@2, generator@0)], projection=[site_label@0, wtur_label@1, generator@2]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(generator_asp@2, generator_asp@1)], projection=[site_label@0, wtur_label@1, generator@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, generator_asp@4]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys@2, gensys@0)], projection=[site_label@0, wtur_label@1, gensys@2]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(gensys_asp@2, gensys_asp@1)], projection=[site_label@0, wtur_label@1, gensys@3]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, gensys_asp@3]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur@2, wtur@0)], projection=[site_label@0, wtur_label@1, wtur@2, gensys_asp@4]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@1)], projection=[site_label@0, wtur_label@2, wtur@3]
                            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(wtur_asp@1, wtur_asp@0)], projection=[site_label@0, wtur_asp@1, wtur_label@3]
                              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site_label@1, wtur_asp@3]
                                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(site@0, site@0)], projection=[site@0, site_label@2]
                                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#Site>], blank_node_mode=Variable
                                  FilterExec: EBV(EQ(ENC_TF(site_label@1), 2:{value:Wind Mountain,language:}))
                                    FilterExec: DynamicFilter [ site@0 >= 0 AND site@0 <= 3 AND site@0 IN (SET) ([0, 1, 2, 3]) ]
                                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <http://www.w3.org/2000/01/rdf-schema#label> ?site_label], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ site@0 >= 0 AND site@0 <= 3 AND site@0 IN (SET) ([0, 1, 2, 3]) ]]
                                FilterExec: DynamicFilter [ site@0 >= 0 AND site@0 <= 0 AND site@0 IN (SET) ([0]) ]
                                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?site <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?wtur_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ site@0 >= 0 AND site@0 <= 0 AND site@0 IN (SET) ([0]) ]]
                              FilterExec: DynamicFilter [ wtur_asp@0 >= 7 AND wtur_asp@0 <= 7 AND wtur_asp@0 IN (SET) ([7]) ]
                                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur_asp <http://www.w3.org/2000/01/rdf-schema#label> ?wtur_label], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ wtur_asp@0 >= 7 AND wtur_asp@0 <= 7 AND wtur_asp@0 IN (SET) ([7]) ]]
                            FilterExec: DynamicFilter [ wtur_asp@1 >= 7 AND wtur_asp@1 <= 7 AND wtur_asp@1 IN (SET) ([7]) ]
                              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?wtur_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ wtur_asp@1 >= 7 AND wtur_asp@1 <= 7 AND wtur_asp@1 IN (SET) ([7]) ]]
                          FilterExec: DynamicFilter [ wtur@0 >= 4 AND wtur@0 <= 4 AND wtur@0 IN (SET) ([4]) ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?gensys_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ wtur@0 >= 4 AND wtur@0 <= 4 AND wtur@0 IN (SET) ([4]) ]]
                        FilterExec: DynamicFilter [ wtur@0 >= 4 AND wtur@0 <= 4 AND wtur@0 IN (SET) ([4, 4]) ]
                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?wtur <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#A>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ wtur@0 >= 4 AND wtur@0 <= 4 AND wtur@0 IN (SET) ([4, 4]) ]]
                      FilterExec: DynamicFilter [ gensys_asp@1 >= 22 AND gensys_asp@1 <= 41 AND gensys_asp@1 IN (SET) ([22, 41]) ]
                        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?gensys_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ gensys_asp@1 >= 22 AND gensys_asp@1 <= 41 AND gensys_asp@1 IN (SET) ([22, 41]) ]]
                    FilterExec: DynamicFilter [ gensys@0 >= 20 AND gensys@0 <= 40 AND gensys@0 IN (SET) ([20, 40]) ]
                      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#RA>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ gensys@0 >= 20 AND gensys@0 <= 40 AND gensys@0 IN (SET) ([20, 40]) ]]
                  FilterExec: DynamicFilter [ gensys@0 >= 20 AND gensys@0 <= 20 AND gensys@0 IN (SET) ([20]) ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?gensys <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspect> ?generator_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ gensys@0 >= 20 AND gensys@0 <= 20 AND gensys@0 IN (SET) ([20]) ]]
                FilterExec: DynamicFilter [ generator_asp@1 >= 23 AND generator_asp@1 <= 23 AND generator_asp@1 IN (SET) ([23]) ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext/rds_power#hasFunctionalAspectNode> ?generator_asp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ generator_asp@1 >= 23 AND generator_asp@1 <= 23 AND generator_asp@1 IN (SET) ([23]) ]]
              FilterExec: DynamicFilter [ generator@0 >= 21 AND generator@0 <= 21 AND generator@0 IN (SET) ([21]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <https://github.com/magbak/chrontext/rds_power#GAA>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ generator@0 >= 21 AND generator@0 <= 21 AND generator@0 IN (SET) ([21]) ]]
            FilterExec: DynamicFilter [ generator@0 >= 21 AND generator@0 <= 21 AND generator@0 IN (SET) ([21]) ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?generator <https://github.com/magbak/chrontext#hasTimeseries> ?ts], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ generator@0 >= 21 AND generator@0 <= 21 AND generator@0 IN (SET) ([21]) ]]
          FilterExec: DynamicFilter [ ts@0 >= 24 AND ts@0 <= 24 AND ts@0 IN (SET) ([24]) ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?ts <http://www.w3.org/2000/01/rdf-schema#label> "Production"], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ ts@0 >= 24 AND ts@0 <= 24 AND ts@0 IN (SET) ([24]) ]]
        FilterExec: DynamicFilter [ ts@0 >= 24 AND ts@0 <= 24 AND ts@0 IN (SET) ([24]) ]
          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?ts <https://github.com/magbak/chrontext#hasDataPoint> ?dp], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ ts@0 >= 24 AND ts@0 <= 24 AND ts@0 IN (SET) ([24]) ]]
      FilterExec: DynamicFilter [ dp@0 >= 120 AND dp@0 <= 739633 AND hash_lookup ]
        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasValue> ?val], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ dp@0 >= 120 AND dp@0 <= 739633 AND hash_lookup ]]
    FilterExec: DynamicFilter [ dp@0 >= 120 AND dp@0 <= 739633 AND hash_lookup ]
      DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?dp <https://github.com/magbak/chrontext#hasTimestamp> ?t], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ dp@0 >= 120 AND dp@0 <= 739633 AND hash_lookup ]]
